--- a/.gitignore
+++ b/.gitignore
@@ -338,7 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-stdshader_dx9_tf2vulkan/src/Generated/
 *.vcxproj.filters
-stdshader_vulkan/src/shaders/Generated/
+stdshader_vulkan/src/shaders/Generated/*
 *.tlog
