--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "sdk2013"]
 	path = sdk2013
 	url = https://github.com/PazerOP/source-sdk-2013
+	branch = modified-correct
 [submodule "spirv-cross"]
 	path = spirv-cross
 	url = https://github.com/PazerOP/SPIRV-Cross.git
