--- a/stdshader_vulkan/CMakeLists.txt
+++ b/stdshader_vulkan/CMakeLists.txt
@@ -10,3 +10,24 @@ add_custom_command( OUTPUT ${COMPILED_SHADERS}
                     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/shaders/HLSL)
 add_custom_target(shaders DEPENDS ${COMPILED_SHADERS})
 
+
+add_library(stdshader_vulkan STATIC)
+target_sources(stdshader_vulkan PUBLIC
+        src/ShaderDLL.cpp
+        src/ShaderBlobs.cpp
+        src/ShaderDLL.cpp
+        src/ShaderDLLVerification.cpp
+        src/shaders/BaseShaderNext.cpp
+        src/shaders/BaseShader.cpp
+        src/shaders/LightmappedGeneric.cpp
+        src/shaders/PlaceholderShader.cpp
+        src/shaders/ShaderComponents/BaseShaderComponent.cpp
+        src/shaders/ShaderParamNext.cpp
+        src/shaders/XLitGeneric.cpp)
+set_source_files_properties(src/ShaderDLL.cpp PROPERTIES COMPILE_FLAGS "-std=c++2a")
+add_dependencies(stdshader_vulkan shaders)
+target_include_directories(stdshader_vulkan PUBLIC include
+                                ./include/
+                                ../TF2VulkanUtil/include/
+                                ../shaderapivulkan/include/
+                                ../sdk2013/mp/src/public/)
